[package]
name = "wbscr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] } # json nie jest tu potrzebne, ale często się przydaje
scraper = "0.18"
tokio-rusqlite = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] } # tokio-rusqlite potrzebuje rusqlite
anyhow = "1.0" # Dla łatwiejszej obsługi błędów
futures = "0.3" # Dla join_all
log = "0.4"
env_logger = "0.10"